# deep-poker-lab

./: .gitignore  README.md  pyproject.toml
backend/: benchmark.py  engine.py  events.py  main.py  observation.py  runner.py  ws.py
backend/bots/: always_call.py  always_fold.py  base.py  equity.py  human.py  llm.py  random_bot.py  tight_aggro.py
backend/bots/gto/: __init__.py  bot.py  mdf.py  opponent_stats.py  preflop_charts.py  range_model.py  texture.py
diary/: 2026-04-27.md  2026-04-28.md  2026-05-02.md  2026-05-06.md  2026-05-14.md
frontend/: package-lock.json
frontend/src/lib/: store.svelte.ts  types.ts
frontend/src/lib/components/: Card.svelte  Leaderboard.svelte  PokerTable.svelte  Seat.svelte
frontend/src/routes/: +page.svelte
tests/: test_engine.py
